Fix the position of the "View Diff" and "View Review Request" links, and add support for hovers on IE.

--- a/htdocs/css/ie_hacks.css
+++ b/htdocs/css/ie_hacks.css
@@ -1,4 +1,5 @@
 body {
+  behavior: url("/scripts/csshover2.htc");
 }
 
 img,
@@ -32,10 +33,6 @@ table.sidebyside th.controls {
   vertical-align: middle;
 }
 
-.box-container {
-  width: 99%;
-}
-
 .box.important {
   padding: 10px;
 }
@@ -46,4 +43,9 @@ table.sidebyside th.controls {
 
 .review-request #details td {
   padding: 4px;
+}
+
+/* Position the "View Diff" and other controls correctly. */
+.review-request #topcontrols {
+  padding: 0 1px 0 0;
 }
